--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-matplotlib==3.9.2
-numpy==2.1.3
-pandas==2.2.3
-scikit_learn==1.5.2
-seaborn==0.13.2
-statsmodels==0.14.4
-streamlit==1.40.1
+matplotlib
+numpy
+pandas
+scikit_learn
+seaborn
+statsmodels
+streamlit
 openpyxl  
+scipy
